--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,6 @@
 .col a, body a {
-  color: #0093a9; }
+  color: #0093a9;
+  text-decoration: none; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #00838f; }
@@ -22,24 +23,43 @@ a.logo img {
 a.logo img:hover {
   text-shadow: #444 1px 1px 1px; }
 
-nav ul li a {
-  display: inline-block;
-  list-style: none; }
-
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%; }
+nav {
+  color: #000; }
+  nav ul li a {
+    display: inline-block;
+    list-style: none; }
 
 div#dashboard {
   position: absolute;
-  width: 70%;
+  width: 50%;
   height: 45%;
+  left: 25%;
   border: 1px dotted cyan;
   color: #666;
-  font-size: 2em; }
+  font-size: 3em; }
+  div#dashboard a {
+    text-decoration: none; }
+  div#dashboard a:hover {
+    text-shadow: #555 1px 1px 1px; }
 
 .margin-top-15 {
   margin-top: 15px; }
+
+.btn {
+  text-decoration: none; }
+
+div#jobApp {
+  position: absolute;
+  width: 80%;
+  height: 30%;
+  bottom: 15%;
+  top: 10%;
+  left: 10%; }
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  bottom: 0%; }
 
 /*# sourceMappingURL=style.css.map */
