--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,7 @@
 .col, body {
 	a {
 		color: #0093a9;
+		text-decoration: none;
 	}
 }
 
@@ -38,31 +39,56 @@ a.logo {
 
 
 nav {
+	color: #000;
 	ul {
 		li a{
 			display: inline-block;
 			list-style: none;
+
 		}
 	}
 }
 
-
-footer {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-}
-
 div#dashboard {
 	position: absolute;
-	width: 70%;
+	width: 50%;
 	height: 45%;
+	left: 25%;
 	border: 1px dotted cyan;
 	color: #666;
-	font-size: 2em;
+	font-size: 3em;
+
+	a {
+		text-decoration: none;
+	}
+
+	a:hover {
+		text-shadow: #555 1px 1px 1px;
+	}
 }
 
 .margin-top-15 {
 	margin-top: 15px;
 }
+
+.btn {
+	text-decoration: none;
+}
+
+div#jobApp {
+	position: absolute;
+	width: 80%;
+	height: 30%;
+	bottom: 15%;
+	top: 10%;
+	left: 10%;
+}
+
+footer {
+	position: absolute;
+	width: 100%;
+	height: 10%;
+	bottom: 0%;
+}
+
 
