--- a/app/views/home/_user_home.html.erb
+++ b/app/views/home/_user_home.html.erb
@@ -1,15 +1,21 @@
 <div class="container">
   <div class="row">
     <div class="col s12 center">
-    <script>populateDashboard();</script>
+    
     	<%= image_tag 'jobhacks2.png', class: "center" %> 
-		<div class = "col s6 center z-depth-3" id="dashboard">
-			<b> <%= current_user.proper_name %> || <%= current_user.username %> </b>
+		<div class = "col center z-depth-3" id="dashboard">
+			<b> <%= current_user.proper_name %> <br> <%= current_user.username %> </b>
 			<br>
-			<i><%= current_user.title %></i>
 			<br>
-			<a href=""class="waves-effect waves-light btn cyan lighten-3">Open LinkedIn Profile</a>
+			<% if current_user.title.length > 0 %>
+				<%= current_user.title %>
+				<br>
+				<br>
+			<% end %>
+			<%= link_to "most recent resume", "www.linkedin.com" %>
 			<br>
+			<br>
+			<script>populateDashboard();</script>
 		</div>
 
 	</div>
