--- a/app/views/job_listings/_form.html.erb
+++ b/app/views/job_listings/_form.html.erb
@@ -1,3 +1,4 @@
+<div id="jobApp">
 <%= simple_nested_form_for @job_listing, :html => { :class => 'form-horizontal' } do |job_form| %>
   <fieldset>
     <legend>Save a job application to your account</legend>
@@ -79,3 +80,5 @@
     </div>
   </fieldset>
 <% end %>
+
+</div>
