fixed homepage link

--- a/app/views/home/_general_home.html.erb
+++ b/app/views/home/_general_home.html.erb
@@ -5,7 +5,7 @@
 		<p class="introduction">
 			Log in with your LinkedIn account below or <%= link_to "sign up here", signup_path %> to start simplifying your job search process now!
 			<br><br>
-			<%= image_tag 'linkedin-button.png', class: "center" %>
+			<a href="#" id="logInImage"><%= image_tag 'linkedin-button.png', class: "center" %></a>
 		</p>
 	</div>
 </div>
